[package]
name = "inline-json"
version = "0.1.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"
description = "json! macro for json-trait"
license = "MIT"
repository = "https://github.com/axion014/inline-json/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"